ref: rmlMapping as InputStream
Previously, Path was used, but switching to InputStream simplifies invocation from Chimera without sacrificing performance.