@@ -29,6 +29,7 @@ import org.eclipse.rdf4j.rio.Rio;
 import org.eclipse.rdf4j.rio.helpers.StatementCollector;
 import org.junit.jupiter.api.Test;
 
+import java.io.InputStream;
 import java.io.StringReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -40,36 +41,34 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 public class RMLTests {
 
-    final static String FOLDER = "src/test/resources/rml/";
-    private String resolvePath(String folder, String file) {
-        return FOLDER + file;
-    }
+    final static Path FOLDER = Path.of("src/test/resources/rml/");
 
     @Test
     public void invalidRMLTest() throws Exception {
-        String folder = "rml";
-        Path rmlMappings = Paths.get(resolvePath(folder, "invalid-mapping.ttl"));
-        assertThrows(RuntimeException.class, () -> Util.validateRML(rmlMappings, false));
+        Path rmlMappings = FOLDER.resolve(Path.of("invalid-mapping.ttl"));
+        try (InputStream rmlMapping = Files.newInputStream(rmlMappings)) {
+            assertThrows(RuntimeException.class,
+                    () -> Util.validateRML(rmlMapping, false));
+        }
     }
 
     @Test
     public void validRMLTest() throws Exception {
-        String folder = "rml";
-        String rmlMappings = resolvePath(folder, "mapping.ttl");
+        Path rmlMapping = FOLDER.resolve(Path.of("mapping.ttl"));
+        String expectedOutput = Files.readString(FOLDER.resolve("output.nq"));
 
-        String expectedOutput = Files.readString(Paths.get(resolvePath(folder, "output.nq")));
+        try (InputStream rmlMappingStream = Files.newInputStream(rmlMapping)) {
+            Util.validateRML(rmlMappingStream, false);
+        }
 
-        Util.validateRML(Paths.get(rmlMappings), false);
-
-        Reader compilerReader = TemplateFunctions.getRDFReaderFromFile(rmlMappings);
+        Reader compilerReader = TemplateFunctions.getRDFReaderFromFile(rmlMapping.toString());
 
         Map<String,String> rmlMap = new HashMap<>();
         rmlMap.put("basePath", null);
 
-
         TemplateExecutor templateExecutor = new TemplateExecutor(false, false, false, null);
-        Path mappingMTL = Util.compiledMTLMapping(Path.of(rmlMappings), null, Path.of(FOLDER), false, false);
-        String result = templateExecutor.executeMapping(Map.of("reader", compilerReader), mappingMTL);
+        Path mappingMTL = Util.compiledMTLMapping(rmlMapping, null, FOLDER, false, false);
+        String result = templateExecutor.executeMapping(Map.of("reader", compilerReader), FOLDER.resolve(mappingMTL.getFileName()));
         Files.delete(mappingMTL);
 
         Model resultModel = parseRDFString(result);
@@ -80,11 +79,9 @@ public class RMLTests {
 
     private static Model parseRDFString(String rdfString) throws Exception {
         RDFParser rdfParser = Rio.createParser(RDFFormat.NQUADS);
-
         Model model = new TreeModel();
         rdfParser.setRDFHandler(new StatementCollector(model));
         rdfParser.parse(new StringReader(rdfString), "http://example.com/base/");
         return model;
     }
-
 }
